Workaround for QTBUG-15421 (list hidden files)

In Qt prior to 4.7.4 QDir wrongfully lists hidden files when asked
to list hidden dirs only. This caused JlCompress::compressDir()
to break in recursive mode for obvious reasons. Now it skips
such files explicitly.